--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--///////////////////////////////////// nav //////////////////////////////////-->
 	<nav class="container navClosed">
 	       <ul class="row">
-		       <li class="col-xs-4" onclick="scrollToElement('#introContainer')">iiiintro</li>
+		       <li class="col-xs-4" onclick="scrollToElement('#introContainer')">intro</li>
 		       <li class="col-xs-4" onclick="scrollToElement('#five')">Work</li>
 		       <li class="col-xs-4" onclick="scrollToElement('#me')">me</li>
 	       </ul>
