Anpassungen für Cases

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 	       </ul>
        </nav>
     <div class="container">
-    <!--///////////////////////////////////// sheader //////////////////////////////////-->
+    <!--///////////////////////////////////// header //////////////////////////////////-->
        
-       <header class="headerBig">
+       <header class="headerBig introHeader">
 	       
 	       <div class="row">
 	       		<div class="logo col-xs-9">
@@ -51,7 +51,7 @@
     	</div>
     </div>
     <!--///////////////////////////////////// intro //////////////////////////////////-->
-	<div class="container fadeIn content" id="introContainer"  data-offset="-400" data-color="rgb(0, 0, 0)" data-bgcolor="#fff" data-text1="Heyfive." data-text2="me">
+	<div class="container fadeIn content" id="introContainer" data-offset="-400" data-color="#000" data-bgcolor="#fff" data-text1="Heyfive." data-text2="me">
 		<section class="intro row" id="intro"  >
 	       		<h1 class="col-xs-11 col-sm-8 col-md-6">Hey, nice to meet you. My name is Martin. You can see some of my work here or read more about me there.</h1>
 	       </section>
