--- a/case.html
+++ b/case.html
@@ -55,16 +55,21 @@
 		<section class="caseIntro row" id="intro"  >
 	       		<h1 class="col-xs-11 col-sm-8 col-md-6 caseTitle">Etapes<br>App</h1>
 	       </section>
-		<section class="row addressBar">
-	       		<span class="col-sm-4 contact" id="contact1">
+	    <section class="row infoText">
+		    <h1 class="col-xs-11 col-sm-8 col-md-6">
+		    	etapes is a concept for a tracking and routing app for cyclists.
+		    </h1>
+	    </section>
+		<section class="row infoBar">
+	       		<span class="col-sm-4 info" id="info1">
 	       			<span class="line">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><br>
 	       			mail<br>you@heyfive.me
 	       		</span>
-	       		<span class="col-sm-4 contact" id="contact2">
+	       		<span class="col-sm-4 info" id="info2">
 	       			<span class="line">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><br>
 	       			phone<br>+49 (0)173.82 05 140
 	       		</span>
-	       		<span class="col-sm-4 contact" id="contact3">
+	       		<span class="col-sm-4 info" id="info3">
 	       			<span class="line">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><br>
 	       			Year<br>2013
 	       		</span>
