caseliste geändert

--- a/index.html
+++ b/index.html
@@ -70,24 +70,20 @@
 	  
 	   
 	<!--///////////////////////////////////// five //////////////////////////////////-->
-	   <section class="container fadeIn content" id="five" data-offset="-400" data-color="#fff" data-bgcolor="#dfdfdf" data-text1="Etapes&nbsp;" data-text2="App" > 
-	   		<span class="workTitle">
-		       		<span class="line">&nbsp;&nbsp;&nbsp;&nbsp;</span>&nbsp;01.Etapes App
-	       		</span>  
-	       <div class="work row">
-	       			<img class="col-xs-12 col-sm-9 image" src="img/etapes3D.png" alt="Etapes App Screens" />
-	       </div><!--row-->
-	       <div class="work row">
-	       			<img class="col-xs-4 col-sm-3 image" src="img/etapesTitle1.png" alt="Etapes App Screens" />
-	       			<img class="col-xs-4 col-sm-3 image" src="img/etapesTitle2.png" alt="Etapes App Screens" />
-	       			<img class="col-xs-4 col-sm-3 image" src="img/etapesTitle3.png" alt="Etapes App Screens" />
-	       </div><!--row-->	
-	       <div class="work row">
-	       			<img class="col-xs-4 col-sm-6 col-md-offset-3 image" src="img/janick_hand.png" alt="Etapes App Screens" />
-	       			<img class="col-xs-4 col-sm-3 image" src="img/etapesTitle2.png" alt="Etapes App Screens" />
-	       			<img class="col-xs-4 col-sm-3 image" src="img/etapesTitle3.png" alt="Etapes App Screens" />
-	       </div><!--row-->	
-	    </section><!-- /container-->
+	   <section class="container fadeIn content" id="five" data-offset="-400" data-color="#000" data-bgcolor="#fff" data-text1="Etapes&nbsp;" data-text2="App" > 
+	   		<a href="" class="col-xs-12 col-sm-6 caseLink" id="etapesLink">
+	   		</a>
+	   		<a href="" class="col-xs-12 col-sm-6 caseLink" id="ropeLink">
+	   		</a>
+	   		<a href="" class="col-xs-12 col-sm-6 caseLink" id="ropeLink">
+	   		</a>
+	   		<a href="" class="col-xs-12 col-sm-6 caseLink" id="etapesLink">
+	   		</a>
+	   		<a href="" class="col-xs-12 col-sm-6 caseLink" id="etapesLink">
+	   		</a>
+	   		<a href="" class="col-xs-12 col-sm-6 caseLink" id="ropeLink">
+	   		</a>	
+	   </section><!-- /container-->
 	    
 	    	<!--///////////////////////////////////// four //////////////////////////////////-->
 	   <section class="container fadeIn content" id="four"  data-offset="-120" data-color="#000" data-bgcolor="#f0f0f0" data-text1="four&nbsp;" data-text2="App" > 
