--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>&#9996;✌ Heyfive.me</title>
+        <title>&#9996; Heyfive.me</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
+        <meta name="apple-mobile-web-app-capable" content="yes" />
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -35,7 +36,7 @@
 	       
 	       <div class="row">
 	       		<div class="logo col-xs-9">
-	       			<span class="logoSpan"><span class="underline" id="logo1">Heyfive.</span></span><span class="logoSpan"><span class="underline" id="logo2">me</span></span>
+	       			<span class="logoSpan"><span id="logo1">Heyfive.</span></span><span class="logoSpan"><span id="logo2">me</span></span>
 	      		</div>
 	      			<div class="col-xs-3 menuBtn hover" onclick="menuToggle()">
 		      			<div class="menuBtnElement" id="menuBtnElement1"></div>
@@ -51,7 +52,7 @@
     	</div>
     </div>
     <!--///////////////////////////////////// intro //////////////////////////////////-->
-	<div class="container fadeIn content" id="introContainer" data-offset="-400" data-color="#000" data-bgcolor="#fff" data-text1="Heyfive." data-text2="me">
+	<div class="container fadeIn content" id="introContainer" data-offset="-400" data-color="#fff" data-bgcolor="#bebebe" data-text1="Heyfive." data-text2="me">
 		<section class="intro row" id="intro"  >
 	       		<h1 class="col-xs-11 col-sm-8 col-md-6">Hey, nice to meet you. My name is Martin. You can see some of my work here or read more about me there.</h1>
 	       </section>
@@ -70,7 +71,7 @@
 	  
 	   
 	<!--///////////////////////////////////// five //////////////////////////////////-->
-	   <section class="container fadeIn content" id="five" data-offset="-400" data-color="#000" data-bgcolor="#fff" data-text1="Work" data-text2="" > 
+	   <section class="container fadeIn content cases" id="five" data-offset="-400" data-color="#000" data-bgcolor="#fff" data-text1="Work" data-text2="" > 
 	   		<a href="case.html" class="col-xs-12 col-sm-6 caseLink hover" id="etapesLink">
 	   			<span class="caseLinkImg"></span>
 	   			<span class="caseImgLinkText">Etapes<br>App</span>
@@ -81,7 +82,7 @@
 	   		</a>
 	   		<a href="case.html" class="col-xs-12 col-sm-6 caseLink hover" id="etapesLink">
 	   			<span class="caseLinkImg"></span>
-	   			<span class="caseImgLinkText">Etapes<br>App</span>
+	   			<span class="caseImgLinkText"><span class="underline">Punze</span><br><span class="underline">Magazine</span></span>
 	   			<div class="caseBtnElementWrapper">
 	   				<div class="caseBtnElement caseBtnElementHorizontal"></div>
 	   				<div class="caseBtnElement caseBtnElementVertical"></div>
@@ -89,7 +90,7 @@
 	   		</a>
 	   		<a href="case.html" class="col-xs-12 col-sm-6 caseLink hover" id="etapesLink">
 	   			<span class="caseLinkImg"></span>
-	   			<span class="caseImgLinkText">Etapes<br>App</span>
+	   			<span class="caseImgLinkText">Arachno-<br>Box</span>
 	   			<div class="caseBtnElementWrapper">
 	   				<div class="caseBtnElement caseBtnElementHorizontal"></div>
 	   				<div class="caseBtnElement caseBtnElementVertical"></div>
