hover und smartphone version

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     	</div>
     </div>
     <!--///////////////////////////////////// intro //////////////////////////////////-->
-	<div class="container fadeIn content" id="introContainer" data-offset="-400" data-color="#fff" data-bgcolor="#bebebe" data-text1="Heyfive." data-text2="me">
+	<div class="container fadeIn content" id="introContainer" data-offset="-400" data-color="#000" data-bgcolor="#fff" data-text1="Heyfive." data-text2="me">
 		<section class="intro row" id="intro"  >
 	       		<h1 class="col-xs-11 col-sm-8 col-md-6">Hey, nice to meet you. My name is Martin. You can see some of my work here or read more about me there.</h1>
 	       </section>
@@ -125,7 +125,7 @@
 	    
 	    		    
 	   <!--///////////////////////////////////// me //////////////////////////////////-->
-	   <section class="container fadeIn content" id="me"  data-offset="-400" data-color="#000" data-bgcolor="#fff" data-text1="About&nbsp;" data-text2="me" > 
+	   <section class="container fadeIn content" id="me"  data-offset="-400" data-color="#000" data-bgcolor="rgba(255, 245, 6, 0.85)" data-text1="About&nbsp;" data-text2="me" > 
 	   		<span class="workTitle">
 		       		<span class="line">&nbsp;&nbsp;&nbsp;&nbsp;</span>&nbsp;me
 	       		</span> 
