hover for touch devices

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
     <!--///////////////////////////////////// intro //////////////////////////////////-->
 	<div class="container fadeIn content" id="introContainer" data-offset="-400" data-color="#000" data-bgcolor="#fff" data-text1="Heyfive." data-text2="me">
-		<section class="intro row" id="intro"  >
+		<section class="intro row hover" id="intro"  >
 	       		<h1 class="col-xs-11 col-sm-8 col-md-6">Hey, nice to meet you. My name is Martin. You can see some of my work here or read more about me there.</h1>
 	       </section>
 		<section class="row addressBar">
