--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	  
 	   
 	<!--///////////////////////////////////// five //////////////////////////////////-->
-	   <section class="container fadeIn content cases" id="five" data-offset="-400" data-color="#fff" data-bgcolor="#bebebe" data-text1="Work" data-text2="" > 
+	   <section class="container fadeIn content cases" id="five" data-offset="-400" data-color="#000" data-bgcolor="#bebebe" data-text1="Work" data-text2="" > 
 	   		<a href="" class="col-xs-12 col-sm-6 caseLink hover" id="etapesLink">
 	   			<span class="caseLinkImg"></span>
 	   			<span class="caseImgLinkText"><span class="underline">Etapes</span><br><span class="underline">App</span></span>
