--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	  
 	   
 	<!--///////////////////////////////////// five //////////////////////////////////-->
-	   <section class="container fadeIn content cases" id="five" data-offset="-400" data-color="#000" data-bgcolor="#bebebe" data-text1="Work" data-text2="" > 
+	   <section class="container fadeIn content cases" id="five" data-offset="-400" data-color="#fff" data-bgcolor="#fff" data-text1="Work" data-text2="" > 
 	   		<a href="" class="col-xs-12 col-sm-6 caseLink hover" id="etapesLink">
 	   			<span class="caseLinkImg"></span>
 	   			<span class="caseImgLinkText"><span class="underline">Etapes</span><br><span class="underline">App</span></span>
@@ -80,7 +80,7 @@
 	   				<div class="caseBtnElement caseBtnElementVertical"></div>
 	   			</div>
 	   		</a>
-	   		<a href="" class="col-xs-12 col-sm-6 caseLink hover" id="etapesLink">
+	   		<a href="" class="col-xs-12 col-sm-6 caseLink hover" id="punzeLink">
 	   			<span class="caseLinkImg"></span>
 	   			<span class="caseImgLinkText"><span class="underline">Punze</span><br><span class="underline">Magazine</span></span>
 	   			<div class="caseBtnElementWrapper">
@@ -88,7 +88,7 @@
 	   				<div class="caseBtnElement caseBtnElementVertical"></div>
 	   			</div>
 	   		</a>
-	   		<a href="" class="col-xs-12 col-sm-6 caseLink hover" id="etapesLink">
+	   		<a href="" class="col-xs-12 col-sm-6 caseLink hover" id="arachnoboxLink">
 	   			<span class="caseLinkImg"></span>
 	   			<span class="caseImgLinkText"><span class="underline">Arachno</span><br><span class="underline">Box</span></span>
 	   			<div class="caseBtnElementWrapper">
@@ -96,7 +96,7 @@
 	   				<div class="caseBtnElement caseBtnElementVertical"></div>
 	   			</div>
 	   		</a>
-	   		<a href="" class="col-xs-12 col-sm-6 caseLink hover" id="etapesLink">
+	   		<a href="" class="col-xs-12 col-sm-6 caseLink hover" id="werkschauLink">
 	   			<span class="caseLinkImg"></span>
 	   			<span class="caseImgLinkText"><span class="underline">Werkschau</span><br><span class="underline">Poster</span></span>
 	   			<div class="caseBtnElementWrapper">
@@ -104,17 +104,17 @@
 	   				<div class="caseBtnElement caseBtnElementVertical"></div>
 	   			</div>
 	   		</a>
-	   		<a href="" class="col-xs-12 col-sm-6 caseLink hover" id="etapesLink">
+	   		<a href="" class="col-xs-12 col-sm-6 caseLink hover" id="meLink">
 	   			<span class="caseLinkImg"></span>
-	   			<span class="caseImgLinkText"><span class="underline">Punze</span><br><span class="underline">Magazine</span></span>
+	   			<span class="caseImgLinkText"><span class="underline">Me, myself</span><br><span class="underline">& I</span></span>
 	   			<div class="caseBtnElementWrapper">
 	   				<div class="caseBtnElement caseBtnElementHorizontal"></div>
 	   				<div class="caseBtnElement caseBtnElementVertical"></div>
 	   			</div>
 	   		</a>
-	   		<a href="" class="col-xs-12 col-sm-6 caseLink hover" id="etapesLink">
+	   		<a href="" class="col-xs-12 col-sm-6 caseLink hover" id="pencilLink">
 	   			<span class="caseLinkImg"></span>
-	   			<span class="caseImgLinkText"><span class="underline">Punze</span><br><span class="underline">Magazine</span></span>
+	   			<span class="caseImgLinkText"><span class="underline">Pencil</span><br><span class="underline">Sculpture</span></span>
 	   			<div class="caseBtnElementWrapper">
 	   				<div class="caseBtnElement caseBtnElementHorizontal"></div>
 	   				<div class="caseBtnElement caseBtnElementVertical"></div>
